# ElectronicHourGlassKit

./: .gitignore  .sconsign.dblite  LICENSE  README.md  SConscriptTests_clang  SConscriptTests_gcc  SConstruct  compile_stages_examples.py  platformio.ini  result.xml
firmware/: stage1.hex  stage10.hex  stage2.hex  stage3.hex  stage4.hex  stage5.hex  stage6.hex  stage7.hex  stage8.hex  stage9.hex
lib/leds1/: SConscript  (+2 more)
src/: eeprom_read.c  extra_example.c  pages_definition.h
src/utils/ehgk_hex_utlis/: README.md  pyproject.toml
src/utils/ehgk_hex_utlis/page_descr/: l2-l6.pd  l2.hex  l3l4.hex  pages.h
src/utils/ehgk_hex_utlis/src/ehgk/: __init__.py  parser.py
src/utils/ehgk_hex_utlis/tests/: grammar_test.py  interpreter_test.py  serializer_test.py
stages/: SConscript
test/: eghk_page_iterator_test_utils.c  eghk_page_iterator_test_utils.h  ehgk_iterator_lines_test.c  ehgk_page_add_led_test.c  ehgk_page_delete_led_test.c  ehgk_page_iterator_column_leds_test.c  ehgk_page_iterator_column_one_led_test.c  ehgk_page_iterator_once_test.c  ehgk_page_iterator_test.h  ehgk_page_test.h  main.c
utils/ehgk_hex_utlis/: .gitignore  README.md  pyproject.toml  requirements.txt
utils/ehgk_hex_utlis/grammar/: page_grammar.gr
utils/ehgk_hex_utlis/hex_output/: eeprom_data.hex
utils/ehgk_hex_utlis/page_descr/: l2-l6.hex  l2.hex  l3l4.hex  l3l4.pd  pages.h  pages.hex  pages.pd
utils/ehgk_hex_utlis/src/ehgk/: ehgk2bin.py  ehgk2c.py  ehgk2hex.py  serializer.py
utils/ehgk_hex_utlis/templates/: ehgk_pages.j2
utils/ehgk_hex_utlis/tests/: parser_test.py  serializer_test.py
(+119 files in other folders)
