[project]
name = "ehgk"
description = "electronical hourglass kit config package"
version = "0.1"
requires-python = ">=3.10"
authors = [
    { name = "Michael Golovanov", email = "mike.golovanov@gmail.com" }
]

dependencies = [
    "intelhex",
    "lark",
    "jinja2"
]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["setuptools>=61.0"] # Minimum version for pyproject.toml support
build-backend = "setuptools.build_meta"
[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
